@@ -3474,6 +3474,7 @@ void CSSStyleSelector::applyProperty(int id, CSSValue *value)
         style->setOpacity(min(1.0f, max(0.0f, primitiveValue->getFloatValue())));
         return;
     case CSS_PROP__WEBKIT_BOX_ALIGN:
+    {
         HANDLE_INHERIT_AND_INITIAL(boxAlign, BoxAlign)
         if (!primitiveValue)
             return;
@@ -3481,6 +3482,7 @@ void CSSStyleSelector::applyProperty(int id, CSSValue *value)
         if (boxAlignment != BJUSTIFY)
             style->setBoxAlign(boxAlignment);
         return;
+    }
     case CSS_PROP_SRC: // Only used in @font-face rules.
         return;
     case CSS_PROP__WEBKIT_BOX_DIRECTION:
@@ -3499,13 +3501,15 @@ void CSSStyleSelector::applyProperty(int id, CSSValue *value)
             style->setBoxOrient(*primitiveValue);
         return;     
     case CSS_PROP__WEBKIT_BOX_PACK:
+    {
         HANDLE_INHERIT_AND_INITIAL(boxPack, BoxPack)
         if (!primitiveValue)
             return;
         EBoxAlignment boxPack = *primitiveValue;
         if (boxPack != BSTRETCH && boxPack != BBASELINE)
             style->setBoxPack(boxPack);
-        return;        
+        return;
+    }
     case CSS_PROP__WEBKIT_BOX_FLEX:
         HANDLE_INHERIT_AND_INITIAL(boxFlex, BoxFlex)
         if (!primitiveValue || primitiveValue->primitiveType() != CSSPrimitiveValue::CSS_NUMBER)
